--- a/custom-frontend/dynamic-yolo-world/backend/src/requirements.txt
+++ b/custom-frontend/dynamic-yolo-world/backend/src/requirements.txt
@@ -1,5 +1,5 @@
 depthai==3.0.0rc2
-git+https://github.com/luxonis/depthai-nodes.git@fix/float_confidence
+git+https://github.com/luxonis/depthai-nodes.git
 opencv-python-headless~=4.10.0
 numpy>=1.22
 onnxruntime
